--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -1,9 +1,10 @@
 .post-container {
   .post {
-    margin-top: 30px;
+    margin-bottom: 30px;
     background-color: #fff;
     padding: .8rem;
-    border-radius: .5rem;
+    border-radius: 1rem;
+    box-shadow: 0 1px 2px #00000033;
     .post-header {
       display: flex;
       justify-content: space-between;
