--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -3,12 +3,13 @@
   display: flex;
   align-items: center;
   margin-left: 1rem;
+  width: 100%;
   .nav-search {
     position: relative;
     width: 100%;
     .search-input {
       font-size: 1.4rem;
-      width: 240px;
+      width: 100%;
       height: 40px;
       background-color: #e4e6eb;
       border-radius: 2rem;
