--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,199 @@
-.app-profile {
-  margin-top: 53.4px;
+.app-profile-container {
+  margin: 53.4px auto;
+  .app-profile {
+    .profile-header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #fff;
+      .profile-images {
+        max-width: 940px;
+        width: 100%;
+        height: 350px;
+        margin-bottom: unset;
+        background-color: #e0e0e0;
+        border-radius: 1rem;
+        position: relative;
+        .images-conatiner {
+          height: 100%;
+        }
+        .images-upload-button {
+          position: absolute;
+          right: 40px;
+          bottom: 20px;
+          padding: 1rem 1.5rem;
+          background-color: #fff;
+          font-weight: bold;
+          border-radius: 0.5rem;
+          cursor: pointer;
+          &:hover {
+            background-color: #f6f5f5;
+          }
+        }
+        .images-avatar {
+          position: absolute;
+          bottom: -20px;
+          left: 50%;
+          z-index: 100;
+          transform: translateX(-50%);
+          border-radius: 50%;
+          width: 150px;
+          height: 150px;
+          background-color: #fff;
+          .avatar-container {
+            position: relative;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .avatar {
+              width: calc(100% - 10px);
+              height: calc(100% - 10px);
+              border-radius: 50%;
+              background-color: #dcdbdb;
+              cursor: pointer;
+              &:active {
+                transform: scale(0.95);
+              }
+            }
+            .avatar-upload-button {
+              position: absolute;
+              right: 5px;
+              bottom: 15px;
+              width: 35px;
+              height: 35px;
+              background-color: #c6cfde;
+              border-radius: 50%;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+      .profile-name {
+        max-width: 940px;
+        width: 100%;
+        text-align: center;
+        margin: 3rem 0;
+        font-size: 3rem;
+        font-weight: bold;
+      }
+      .profile-navigate {
+        max-width: 940px;
+        width: 100%;
+        margin-bottom: unset;
+        padding: 0 5rem;
+        .navigate-landing {
+          display: flex;
+          list-style: none;
+          margin-bottom: unset;
+          height: 100%;
+          border-top: 1px solid #c6c6c6;
+          padding-top: 0.5rem;
+          .landing-item {
+            display: flex;
+            .item-icon {
+              display: inline-block;
+              color: #000;
+              transition: background-color 0.2s ease-in-out;
+              border-bottom: 3px solid transparent;
+              display: flex;
+              align-items: center;
+              span {
+                display: inline-block;
+                padding: 1rem;
+                &:hover {
+                  border-radius: 0.5rem;
+                  background-color: #efeded;
+                }
+              }
+              &.active {
+                border-bottom-color: #1877f2;
+                color: #1877f2;
+                background-color: transparent;
+                span {
+                  &:hover {
+                    border-radius: unset;
+                    background-color: unset;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .profile-container {
+      max-width: 940px;
+      margin: auto;
+      margin-bottom: unset;
+      display: flex;
+      margin-top: 2rem;
+      .profile-body-left {
+        width: 40%;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 54px;
+        z-index: 1;
+        align-self: flex-start;
+        .profile-images-conatiner {
+          border-radius: 1rem;
+          background-color: #fff;
+          box-shadow: 0 1px 2px #00000033;
+          padding: 1rem;
+          .images-header {
+            font-size: 2.5rem;
+            font-weight: bold;
+            padding: 0 1rem;
+          }
+        }
+        .profile-friends-conatiner {
+          border-radius: 1rem;
+          background-color: #fff;
+          box-shadow: 0 1px 2px #00000033;
+          padding: 1rem;
+          margin-top: 2rem;
+          .friends-header {
+            font-size: 2.5rem;
+            font-weight: bold;
+            padding: 0 1rem;
+          }
+          .friends-amount {
+            display: inline-block;
+            color: #65676b;
+            font-size: 1.8rem;
+            margin-top: 1rem;
+            padding: 0 1rem;
+          }
+          .friends-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            padding: 1rem;
+            margin-top: 1rem;
+            .friends-item {
+              width: 30%;
+              display: inline-block;
+              margin-bottom: 1.5rem;
+              cursor: pointer;
+              .item-image {
+                display: inline-block;
+                width: 100%;
+                height: 100px;
+                border-radius: 0.5rem;
+                background-color: #d7d8d8;
+              }
+              .item-name {
+                font-size: 1.5rem;
+                font-weight: 500;
+              }
+            }
+          }
+        }
+      }
+      .profile-body-right {
+        width: 60%;
+        padding-left: 2rem;
+      }
+    }
+  }
 }
