--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,8 +1,11 @@
 html, body {
   height: calc(100vh - 53.4px);
-  background-color: #f0f2f5;
   font-size: 10px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#root {
+  background-color: #fff;
 }
 
 .app-container {
