--- a/src/pages/friends/friends.scss
+++ b/src/pages/friends/friends.scss
@@ -4,6 +4,7 @@
   margin-top: 53.4px;
   .app-friends-list {
     width: 360px;
+    min-width: 360px;
     .app-friends-list-container {
       position: fixed;
       top: 53.4px;
@@ -15,6 +16,28 @@
     flex-grow: 1;
     .app-profile-container {
       margin-top: unset;
+      .app-profile {
+        .profile-container {
+          @media screen and (max-width: 1270px) {
+            flex-direction: column;
+            align-items: center;
+            .profile-body-left, .profile-body-right {
+              width: 480px;
+              position: unset;
+              align-self: unset;
+            }
+            .profile-body-left {
+              .profile-friends-conatiner {
+                .friends-list {
+                  .friends-item {
+                    width: 21%;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
