--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -81,7 +81,7 @@
         max-width: 940px;
         width: 100%;
         margin-bottom: unset;
-        padding: 0 5rem;
+        padding: 0 2rem;
         .navigate-landing {
           display: flex;
           list-style: none;
@@ -128,6 +128,7 @@
       margin-bottom: unset;
       display: flex;
       margin-top: 2rem;
+      padding: 0 2rem;
       .profile-body-left {
         width: 40%;
         position: -webkit-sticky;
@@ -170,11 +171,13 @@
             justify-content: space-between;
             padding: 1rem;
             margin-top: 1rem;
+            padding-bottom: unset;
             .friends-item {
               width: 30%;
               display: inline-block;
               margin-bottom: 1.5rem;
               cursor: pointer;
+              align-self: flex-start;
               .item-image {
                 display: inline-block;
                 width: 100%;
@@ -186,6 +189,9 @@
                 font-size: 1.5rem;
                 font-weight: 500;
               }
+            }
+            .friends-item-fix {
+              margin-bottom: unset;
             }
           }
         }
