--- a/src/pages/signin/signin.scss
+++ b/src/pages/signin/signin.scss
@@ -15,15 +15,24 @@
       flex-direction: column;
       justify-content: center;
       .form-group {
-        margin-bottom: 1.5rem;
+        margin-bottom: 2.4rem;
+        .ant-form-item {
+          margin-bottom: unset;
+        }
         .form-input {
           width: 100%;
           padding: 1.4rem;
           font-size: 1.7rem;
           border-radius: 0.5rem;
-          border: 1px solid #d3d0d0;
           &:focus-visible {
             outline: unset;
+          }
+        }
+        .form-input-control {
+          .ant-form-item-control {
+            .ant-form-item-explain {
+              display: none;
+            }
           }
         }
       }
