--- a/src/navbar/nav-bar.scss
+++ b/src/navbar/nav-bar.scss
@@ -80,6 +80,9 @@
           .user-text {
             margin-left: .5rem;
           }
+          &.active {
+            background-color: #f0f0f0;
+          }
           &:hover{
             background-color: #f0f0f0;
           }
