add post modal and enhance css

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,7 @@ html, body {
   height: calc(100vh - 53.4px);
   font-size: 10px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f0f2f5 !important;
 }
 
 #root {
