--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -91,6 +91,8 @@
         width: 100%;
         margin-bottom: unset;
         padding: 0 2rem;
+        display: flex;
+        align-items: center;
         .navigate-landing {
           display: flex;
           list-style: none;
@@ -125,6 +127,28 @@
                     background-color: unset;
                   }
                 }
+              }
+            }
+          }
+        }
+        .landing-actions {
+          margin-left: 2rem;
+          .landing-button {
+            padding: 0.5rem 1.5rem;
+            border: unset;
+            cursor: pointer;
+            background-color: #e4e6eb;
+            border-radius: 0.5rem;
+            font-weight: 500;
+            &.button-friend:hover {
+              background-color: #d0d3d9;
+            }
+            &.button-message {
+              margin-left: 1rem;
+              background-color: #1b74e4;
+              color: #fff;
+              &:hover {
+                background-color: #0661d4;
               }
             }
           }
