--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -3,8 +3,9 @@
     margin-bottom: 30px;
     background-color: #fff;
     padding: .8rem;
+    padding-bottom: unset;
     border-radius: 1rem;
-    box-shadow: 0 1px 2px #00000033;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     .post-header {
       display: flex;
       justify-content: space-between;
@@ -24,14 +25,20 @@
           flex-direction: column;
           .text-name {
             cursor: pointer;
+            line-height: 1;
+            font-weight: 500;
+            font-size: 1.8rem;
           }
           .text-time {
             cursor: pointer;
+            line-height: 1;
+            font-size: 1.3rem;
+            margin-top: 0.5rem;
           }
         }
       }
-      .post-extension {
-        font-size: 30px;
+      .post-close {
+        font-size: 2rem;
         cursor: pointer;
       }
     }
@@ -72,8 +79,8 @@
       .post-actions {
         display: flex;
         justify-content: space-around;
-        border-top: 1px solid #b0b0b0;
-        border-bottom: 1px solid #b0b0b0;
+        border-top: 1px solid rgba(0, 0, 0, 0.2);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
         padding: .4rem 0;
         .action {
           cursor: pointer;
@@ -85,6 +92,9 @@
             background-color: #eeeeee;
           }
         }
+      }
+      .post-comments-container {
+        padding-bottom: 1rem;
       }
     }
   }
