--- a/src/components/post/post-comment/post-comment.scss
+++ b/src/components/post/post-comment/post-comment.scss
@@ -3,14 +3,44 @@
   .comment {
     .comment-block {
       display: flex;
+      position: relative;
+      .comment-tree {
+        position: absolute;
+        top: 40px;
+        left: 20px;
+        width: 2px;
+        height: 55px;
+        background: #f0f2f5;
+      }
+      .comment-tree-end {
+        position: absolute;
+        top: 95px;
+        left: 20px;
+        width: 20px;
+        height: 20px;
+        border-left: 2px solid #f0f2f5;
+        border-bottom: 2px solid #f0f2f5;
+        border-bottom-left-radius: 10px;
+      }
+      .comment-tree-item {
+        position: absolute;
+        top: 40px;
+        left: 20px;
+        width: 2px;
+        height: 100%;
+        background: #f0f2f5;
+      }
       .comment-user {
-        min-width: 30px;
-        width: 30px;
-        height: 30px;
-        background-color: #b4afaf;
+        min-width: 40px;
+        width: 40px;
+        height: 40px;
+        background-color: #e4e6eb;
         border-radius: 50%;
       }
       .comment-content {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
         .comment-text {
           background-color: #f0f2f5;
           padding: .6rem;
@@ -19,6 +49,7 @@
           display: flex;
           flex-direction: column;
           position: relative;
+          align-self: flex-start;
           .comment-name {
             font-weight: 600;
           }
@@ -55,6 +86,17 @@
           }
           .hours {
             color: #65676b;
+          }
+        }
+        .comment-editable-container {
+          .create-comment-container {
+            .create-comment {
+              .comment-icon {
+                min-width: 30px;
+                width: 30px;
+                height: 30px;
+              }
+            }
           }
         }
       }
