--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -58,6 +58,26 @@
       align-items: center;
       padding: 1rem 0;
       .post-emotion {
+        display: flex;
+        align-items: center;
+        .post-emoji-container {
+          display: inline-flex;
+          flex-direction: row-reverse;
+          .emoji-item {
+            display: inline-block;
+            cursor: pointer;
+            line-height: 1;
+            margin-left: -5px;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            img {
+              width: 20px;
+            }
+            &:last-child {
+              margin-left: 0;
+            }
+          }
+        }
         .post-emotion-number {
           margin-left: .5rem;
           color: #65676b;
@@ -82,13 +102,44 @@
         border-top: 1px solid rgba(0, 0, 0, 0.2);
         border-bottom: 1px solid rgba(0, 0, 0, 0.2);
         padding: .4rem 0;
-        .action {
+        .action-item {
           cursor: pointer;
-          flex-basis: 33%;
+          flex-basis: 50%;
           text-align: center;
           padding: .6rem 0;
           border-radius: .5rem;
+          position: relative;
+          .emojis-container {
+            position: absolute;
+            top: -40px;
+            left: 0;
+            display: none;
+            padding: 0.3rem 0.1rem;
+            border-radius: 5rem;
+            border: 1px solid rgba(0, 0, 0, 0.2);
+            background-color: #fff;
+            .emoji-item {
+              display: inline-block;
+              margin: 0 0.3rem;
+              img {
+                width: 35px;
+                transform-origin: bottom;
+                transition: transform .1s ease-in-out; 
+              }
+              &:hover {
+                img {
+                  transform: scale(1.2);
+                }
+              }
+            }
+          }
           &:hover {
+            background-color: #eeeeee;
+            .emojis-container {
+              display: flex;
+            }
+          }
+          &.liked {
             background-color: #eeeeee;
           }
         }
