--- a/src/components/post/post-comment/post-comment.scss
+++ b/src/components/post/post-comment/post-comment.scss
@@ -64,7 +64,31 @@
             font-weight: 600;
           }
           .comment-message {
-            
+            .image-list {
+              display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+              justify-content: space-between;
+              cursor: pointer;
+              .image-item {
+                width: 48%;
+                overflow: hidden;
+                border: 5px solid #fff;
+                border-radius: 1rem;
+                margin-bottom: 1rem;
+                display: flex;
+                img {
+                  max-width: 100%;
+                  height: auto;
+                  transition: transform 0.1s ease-in-out;
+                }
+                &:hover {
+                  img {
+                    transform: scale(1.1);
+                  }
+                }
+              }
+            }
           }
           .comment-emotion-container {
             position: absolute;
