--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -55,6 +55,10 @@
               display: flex;
               align-items: center;
               justify-content: center;
+              overflow: hidden;
+              img {
+                width: 100%;
+              }
               .avatar-character {
                 font-size: 60px;
                 line-height: 1;
@@ -74,6 +78,10 @@
               background-color: #c6cfde;
               border-radius: 50%;
               cursor: pointer;
+              font-size: 2rem;
+              display: flex;
+              align-items: center;
+              justify-content: center;
             }
           }
         }
@@ -169,70 +177,76 @@
         top: 54px;
         z-index: 1;
         align-self: flex-start;
-        .profile-images-conatiner {
-          border-radius: 1rem;
-          background-color: #fff;
-          box-shadow: 0 1px 2px #00000033;
-          padding: 1rem;
-          .images-header {
-            font-size: 2.5rem;
-            font-weight: bold;
-            padding: 0 1rem;
-          }
-        }
-        .profile-friends-conatiner {
-          border-radius: 1rem;
-          background-color: #fff;
-          box-shadow: 0 1px 2px #00000033;
-          padding: 1rem;
-          margin-top: 2rem;
-          .friends-header {
-            font-size: 2.5rem;
-            font-weight: bold;
-            padding: 0 1rem;
-          }
-          .friends-amount {
-            display: inline-block;
-            color: #65676b;
-            font-size: 1.8rem;
-            margin-top: 1rem;
-            padding: 0 1rem;
-          }
-          .friends-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            padding: 1rem;
-            margin-top: 1rem;
-            padding-bottom: unset;
-            .friends-item {
-              width: 30%;
-              display: inline-block;
-              margin-bottom: 1.5rem;
-              cursor: pointer;
-              align-self: flex-start;
-              .item-image {
-                display: inline-block;
-                width: 100%;
-                height: 100px;
-                border-radius: 0.5rem;
-                background-color: #d7d8d8;
-              }
-              .item-name {
-                font-size: 1.5rem;
-                font-weight: 500;
-              }
-            }
-            .friends-item-fix {
-              margin-bottom: unset;
-            }
-          }
-        }
       }
       .profile-body-right {
         width: 60%;
         padding-left: 2rem;
       }
+    }
+  }
+}
+
+.profile-images-conatiner {
+  border-radius: 1rem;
+  background-color: #fff;
+  box-shadow: 0 1px 2px #00000033;
+  padding: 1rem;
+  width: 100%;
+  .images-header {
+    font-size: 2.5rem;
+    font-weight: bold;
+    padding: 0 1rem;
+  }
+}
+.profile-friends-conatiner {
+  border-radius: 1rem;
+  background-color: #fff;
+  box-shadow: 0 1px 2px #00000033;
+  padding: 1rem;
+  margin-top: 2rem;
+  width: 100%;
+  .friends-header {
+    font-size: 2.5rem;
+    font-weight: bold;
+    padding: 0 1rem;
+  }
+  .friends-amount {
+    display: inline-block;
+    color: #65676b;
+    font-size: 1.8rem;
+    margin-top: 1rem;
+    padding: 0 1rem;
+  }
+  .friends-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem;
+    margin-top: 1rem;
+    padding-bottom: unset;
+    .friends-item {
+      display: inline-block;
+      margin-bottom: 1.5rem;
+      cursor: pointer;
+      align-self: flex-start;
+      width: 100px;
+      .item-image {
+        display: inline-block;
+        width: 100%;
+        height: 100px;
+        border-radius: 0.5rem;
+        background-color: #d7d8d8;
+        img {
+          width: 100%;
+        }
+      }
+      .item-name {
+        font-size: 1.5rem;
+        font-weight: 500;
+      }
+    }
+    .friends-item-fix {
+      margin-bottom: unset;
     }
   }
 }
