--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -45,10 +45,54 @@
     .post-content {
       max-width: 100%;
       margin-top: 1rem;
-      .post-images {
+      .image-list {
         margin-top: .5rem;
-        img {
-          width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        position: relative;
+        border-radius: 1.5rem;
+        overflow: hidden;
+        .image-item {
+          display: inline-block;
+          padding: .2rem;
+          position: relative;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+          .image-item-total {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 3rem;
+            background-color: rgba(0, 0, 0, 0.3);
+            color: #fff;
+          }
+          &.w-100{
+            width: 100%;
+          }
+          &.w-50{
+            width: 50%;
+          }
+          &.w-33{
+            width: 33.33333%;
+          }
+          &.w-30{
+            width: 30%;
+          }
+        }
+        &.flex-column {
+          flex-direction: column;
+        }
+        &.flex-row {
+          flex-direction: row;
         }
       }
     }
