handle upload background User and upload image for Post

--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -45,7 +45,7 @@
     .post-content {
       max-width: 100%;
       margin-top: 1rem;
-      .image-list {
+      .images-list {
         margin-top: .5rem;
         display: flex;
         flex-direction: column;
