--- a/src/pages/profile/profile-photos/profile-photos.scss
+++ b/src/pages/profile/profile-photos/profile-photos.scss
@@ -2,7 +2,7 @@
   border-radius: 1rem;
   background-color: #fff;
   box-shadow: 0 1px 2px #00000033;
-  padding: 1rem;
+  padding: 1.5rem;
   width: 100%;
   .images-header {
     font-size: 2.5rem;
@@ -10,15 +10,38 @@
     padding: 0 1rem;
   }
   .images-content {
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     .images-item {
       display: inline-block;
       width: 100px;
       height: 100px;
+      margin-top: .9rem;
+      overflow: hidden;
       img {
         width: 100%;
+        height: 100%;
         object-fit: cover;
+      }
+      &.images-item-fix {
+        margin-top: unset;
+        height: unset;
+      }
+    }
+    &.profile-route {
+      .images-item {
+        &:nth-child(1){
+          margin-top: unset;
+        }
+        &:nth-child(2){
+          margin-top: unset;
+        }
+        &:nth-child(3){
+          margin-top: unset;
+        }
       }
     }
   }
