--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -7,7 +7,6 @@
       align-items: center;
       background-color: #fff;
       .profile-images {
-        max-width: 940px;
         width: 100%;
         height: 350px;
         margin-bottom: unset;
@@ -16,6 +15,11 @@
         position: relative;
         .images-conatiner {
           height: 100%;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
         .images-upload-button {
           position: absolute;
