--- a/src/components/popup-messenger-container/popup-messenger/popup-messenger.scss
+++ b/src/components/popup-messenger-container/popup-messenger/popup-messenger.scss
@@ -15,6 +15,23 @@
       justify-content: space-between;
       border-bottom: 1px solid rgba(0, 0, 0, 0.2);
       z-index: 1;
+      align-items: center;
+      .popup-close {
+        color: #716e6e;
+        font-size: 1.8rem;
+        background-color: transparent;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: background-color .1s ease-in-out;
+        &:hover {
+          background-color: #e4e6eb;
+        }
+      }
     }
     .popup-content {
       flex-grow: 1;
@@ -100,6 +117,10 @@
         }
         .message-send {
           align-self: flex-end;
+          line-height: 1;
+          font-size: 3rem;
+          margin-left: .5rem;
+          cursor: pointer;
         }
       }
     }
