--- a/src/components/create-comment/create-comment.scss
+++ b/src/components/create-comment/create-comment.scss
@@ -66,6 +66,10 @@
             position: relative;
             margin-right: 1rem;
             background-color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 4rem;
           }
         }
       }
