--- a/src/components/popup-messenger-container/popup-messenger/popup-messenger.scss
+++ b/src/components/popup-messenger-container/popup-messenger/popup-messenger.scss
@@ -98,11 +98,59 @@
         display: flex;
         align-items: center;
         padding: 20px 10px;
+        .message-icons {
+          align-self: flex-end;
+          .icon-item {
+            padding: 0 .5rem;
+            font-size: 2rem;
+            cursor: pointer;
+          }
+        }
         .message-input-container {
           flex-grow: 1;
           background-color: #f0f2f5;
           border-radius: 15px;
           padding: 5px 10px;
+          .message-files-container {
+            margin: .5rem 0 1rem 0;
+            .message-files {
+              display: flex;
+              flex-direction: row;
+              .file-item {
+                width: 48px;
+                height: 48px;
+                border-radius: 1rem;
+                position: relative;
+                margin-right: 1rem;
+                .file-close {
+                  position: absolute;
+                  right: -5px;
+                  top: -5px;
+                  line-height: 1;
+                  z-index: 1;
+                }
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  border-radius: 1rem;
+                }
+              }
+              .file-upload {
+                width: 48px;
+                height: 48px;
+                border-radius: 1rem;
+                position: relative;
+                margin-right: 1rem;
+                background-color: #fff;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 4rem;
+                cursor: pointer;
+              }
+            }
+          }
           .message-input {
             width: 100%;
             word-break: break-all;
@@ -118,7 +166,7 @@
         .message-send {
           align-self: flex-end;
           line-height: 1;
-          font-size: 3rem;
+          font-size: 2rem;
           margin-left: .5rem;
           cursor: pointer;
         }
