--- a/src/pages/messengers/messengers.scss
+++ b/src/pages/messengers/messengers.scss
@@ -1,3 +1,95 @@
 .app-messengers {
   margin-top: 53.4px;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: #fff;
+  padding: 0 0.5rem;
+  .messenger-friends {
+    width: 360px;
+    padding: 0 .5rem;
+    .friends-title {
+      font-size: 2rem;
+      font-weight: 600;
+      text-align: center;
+    }
+    .friends-container {
+      height: calc(100% - 35px);
+      display: flex;
+      flex-direction: column;
+      .friends-search {
+        margin: 2rem 3rem;
+        background-color: #e4e6eb;
+        border-radius: 1.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 1rem;
+        cursor: pointer;
+        .search-icon {
+          line-height: 1;
+        }
+        .search-typing {
+          background-color: transparent;
+          border: unset;
+          outline: unset;
+          padding: 0.5rem;
+          border-radius: 1.5rem;
+          width: 100%;
+        }
+      }
+      .friends-list {
+        flex-grow: 1;
+        overflow-y: auto;
+        .friends-item {
+          display: flex;
+          flex-direction: row;
+          padding: 0.5rem;
+          border-radius: 0.5rem;
+          cursor: pointer;
+          overflow: hidden;
+          transition: background-color .1s ease-in-out;
+          .item-icon {
+            width:50px;
+            max-width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #e4e6eb;
+          }
+          .item-info {
+            display: flex;
+            flex-direction: column;
+            padding: 0 0.8rem;
+            flex-grow: 1;
+          }
+          &:hover {
+            background-color: #f2f2f2;
+          }
+          &.active {
+            background-color: #2d88ff1a;
+          }
+        } 
+        // scroll
+        &::-webkit-scrollbar-track {
+          border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar {
+          width: 7px;
+          background-color: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          border-radius: 10px;
+          background-color: transparent;
+        }
+        &:hover {
+          overflow-y: auto;
+          &::-webkit-scrollbar-thumb {
+            background-color: #ced0d4;
+          }
+        }
+      }
+    }
+  }
 }
